--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -61,11 +61,7 @@
 .menu_item{
     display: none;
 }
-.filtro{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+
 .form-select{
     width: 60%;
 }
@@ -155,5 +151,16 @@
     img .card-img-top{
         padding: 5px;
         width: 50px;
+    }
+    .hada2{
+        animation: move 6s infinite;
+    }
+    @keyframes move{
+        from {
+            transform: translate(0);
+        }
+        to{
+            transform: translate(900px);
+        }
     }
 }
