--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,10 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 1.2rem;
 }
+
+body {
+    margin: 0 auto;
+}
 .grid-container{
     display: grid;
     grid-template-areas: 
@@ -12,13 +16,12 @@
     "sidebar"
     "main"
     "footer";
-    grid-template-columns: 1fr 6fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 6,5fr 1fr;
 }
 .header{
     grid-area: header;
     background-color: rgb(214, 248, 188);
-    width: 400px;
 }
 
 .sidebar{
@@ -27,6 +30,7 @@
 }
 .main{
     grid-area: main;
+    gap: 10px;
     background-color: rgb(46, 245, 195);
 }
 .footer{
